--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "body-parser": "^1.19.0",
-    "express-validation": "^3.0.8",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-validation": "^3.0.8",
+    "jquery": "^3.6.1",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
